# RobotinoTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate-linux.sh  generate-win.bat  install-linux.sh  premake5.lua  workspace.lua
include/: RobotinoAction.h
src/: RobotinoAction.cpp  main.cpp
